C4: Fix 3-player board display on mobile

--- a/css/game.css
+++ b/css/game.css
@@ -256,9 +256,9 @@
         width: 95vw;
     }
     .slot {   
-        padding: 4vw;
+        padding: 3vw;
     }
     .column {
-        padding: 2.2vw;
+        padding: 1vw;
     }
 }
